@@ -823,7 +823,7 @@ extern void GEOS_DLL GEOSSTRtree_query_r(GEOSContextHandle_t handle,
                                          GEOSQueryCallback callback,
                                          void *userdata);
 
-extern const void GEOS_DLL *GEOSSTRtree_nearest_r(GEOSContextHandle_t handle,
+extern const GEOSGeometry GEOS_DLL *GEOSSTRtree_nearest_r(GEOSContextHandle_t handle,
                                                   GEOSSTRtree *tree,
                                                   const GEOSGeometry* geom);
 
