@@ -2,6 +2,7 @@ Changes in 3.6.1
 2016-MM-DD
 
 - Bug fixes / improvements
+  - Fix GEOSSTRtree_nearest_r signature and add implementation (#796)
 
 Changes in 3.6.0
 2016-10-25
